<resources>
    <string name="app_name">Manga Check</string>

    <string name="delete_library_button">Delete</string>
    <string name="delete_library_message">Are you sure to delete </string>

    <string name="status_comic_reading">Reading</string>
    <string name="status_comic_completed">Completed</string>
    <string name="status_comic_planning">Planning</string>
    <string name="add_comic_ch_name">Name</string>
    <string name="add_comic_ch_number">Chapter N*</string>
    <string name="add_comic_submit">Add</string>
    <string name="add_comic_fetching">Fetching data</string>
    <string name="page_previous">Previous</string>
    <string name="page_search">Search</string>
    <string name="page_forward">Forward</string>


    <string-array name="spinner_status">
        <item>Reading</item>
        <item>Planning</item>
        <item>Completed</item>
    </string-array>
    <string name="spinner_hint">Status</string>
    <string name="update_dialog_debug">UserDefinedName</string>
    <string name="chapter_name">Chapter name</string>
    <string name="chapter_abbreviations">Ch.</string>
    <string name="chapter_abbreviation_number">num</string>

    <string name="search_hint">Page Index</string>
    <string name="library_card_image_desc">Comics Image</string>
    <string name="reader_back_description">Back</string>

    <string name="missing">Lorem Ipsum</string>
    <string name="search_dialog_header">Search</string>

    <string name="add_library_submit">Search</string>
    <string name="library_title">Library</string>
    <string name="title_reading_list">Reading List</string>
    <string name="title_import">Import</string>
    <string name="title_export">Export</string>
    <string name="title_library">Library</string>

    <string name="reading_list">Reading</string>
    <string name="completed_list">Completed</string>
    <string name="planning_list">Planning</string>

    <string name="XML_file">readingList.xml</string>
    <string name="library_XML">libraryList.xml</string>
    <string name="chapter_XML">chapterList.xml</string>

    <string name="ip_addr">84.247.209.68</string>
    <string name="server_port">5000</string>
    <string name="zipPath_not_found">Please select a file</string>

    <string name="list_comic_label">Chapters</string>
    <string name="delete_comic_submit">delete</string>

    <string name="reading_list_label">Reading list</string>
    <string name="add_chapter_label">Add chapter</string>
    <string name="add_library_label">Add library</string>
    <string name="add_reading_by_name_label">Search by name</string>
    <string name="add_reading_set_status_label">Set status</string>
    <string name="response_empty">There isn\'t any comic with this name</string>
</resources>